dsl2/src/test/resources/parsing/invalid/bad_tree/func_no_return.uss
int foo() {
    console.info("non");
}
